more spacing fixing

--- a/html/character_sheet.css
+++ b/html/character_sheet.css
@@ -53,7 +53,10 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #insp-prof-st-skills {
-	height: 10vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 81vh;
 	margin: 1%;
 	margin-top: 0;
 }
@@ -62,7 +65,7 @@ input[type=number]::-webkit-outer-spin-button {
 	display: block;
 	height: 5vh; 
 	width: 100%;
-	margin: 0 0 1% 1%;
+	margin: 1%;
 	background-color: #CBF3F0;
 	border: 2px black solid;
 }
@@ -86,7 +89,7 @@ input[type=number]::-webkit-outer-spin-button {
 	height: 81vh;
 	flex-direction: column;
 	flex-basis: 32%;
-	justify-content: space-evenly;
+	justify-content: space-between;
 }
 
 #statsboxLeftCol { /*stats box CSS for the left column*/
@@ -126,7 +129,7 @@ input[type=number]::-webkit-outer-spin-button {
 	width: 100%;
 	border: 2px black solid;
 	background-color: #CBF3F0;
-	margin: 1%
+	margin: 1%;
 }
 
 #ST-form { /*the form CSS for saving throws for styling later if needed*/
